--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -4,8 +4,160 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My first assignment</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>my first assignment</h1>
+    <div class="main-header">
+      <nav class="nav">
+        <p class="nom">Camille BECHARA-FORS</p>
+      </nav>
+      <div class="line"></div>
+      <header>
+        <h1 class="titre">Interactive Media</h1>
+      </header>
+      <div class="intro">
+        <p>
+          For this project, I selected
+          <a href="https://alannn.com/index">https://alannn.com/index</a>
+        </p>
+      </div>
+    </div>
+
+    <main>
+      <div class="content">
+        <div class="answer">
+          <p>
+            1/ The first thing I noticed was that the cursor was an animated
+            fly.
+          </p>
+        </div>
+        <div class="answer">
+          <p>
+            2/ During the two minutes, I started to scroll, clicked on the About
+            page, pressed the power button on the landing page, explored the
+            Work page, clicked on the portoflio page interaction in the works
+            page, viewed the projects, clicked on the Links page, and finally
+            checked the Awards button.
+          </p>
+        </div>
+
+        <div class="answer">
+          <p>
+            3/ I spent the most time navigating between the About and Work pages
+            because I wanted to see both the personal information and the
+            showcased projects. These two pages were the ones that had the most
+            content because its a portfolio page so its what people are the most
+            interested in, skills and works.
+          </p>
+        </div>
+        <div class="answer">
+          <p>
+            4/ In the two minutes experience, the most common actions were
+            scrolling and clicking on everything that looked interactive.
+          </p>
+        </div>
+        <div class="answer">
+          <p>
+            5/ My impression of the website is that it is a portoflio that
+            showcases his skills, not just with the work or technical skills he
+            shares, but rather through interaction and design of the website.
+          </p>
+        </div>
+        <div class="answer">
+          <p>
+            6/ The interactive experience communicates this primary goal just
+            from interacting that he is both a developer and a designer because
+            of how clean layout is, the strong visual identity, and how coherent
+            the design is.
+          </p>
+        </div>
+        <div class="answer">
+          <p>
+            7/ The experience should be explored by clicking through all the
+            pages in his portfolio to fully see his work and technical skills.
+            Users should also take time to notice small interactive details—for
+            example, hovering over the coffee cup triggers a subtle smoke
+            animation. It takes around five minutes, or a little more, to
+            interact with the entire website, which is usually enough to see and
+            appreciate his design and development skills. If he adds new work
+            over time, it’s worth revisiting the site.
+          </p>
+        </div>
+        <div class="answer">
+          <p>
+            8/ The interactive experience communicates how it should be used
+            through subtle signals, such as hover effects. For example, when you
+            hover over the "About" page, the word becomes larger, inviting you
+            to click on it. The animations also help guide the user, and the
+            site is very structured, with a landing page, About page, Work page,
+            Links page, and Awards page, making the navigation clear and
+            intuitive for the users.
+          </p>
+        </div>
+        <div class="answer">
+          <p>
+            9/ the experience references from many different other media forms
+            such as digital art for the illustrations, motion design because of
+            the site’s animations, and of course UI elements that are
+            interactive such as hover effect, scroll, clickable content.
+          </p>
+        </div>
+        <div class="answer">
+          <p>
+            10/ The references communicate that I should be curious, explore
+            everything that looks interactive, and take time to notice details
+            and animations.
+          </p>
+        </div>
+        <div class="answer">
+          <p>
+            11/ The references on the site communicate that I should feel
+            curious, and engaged while interacting with the experience. The use
+            of motion design, hover effects, interactive elements, and a
+            coherent design makes the experience enjoyable and intuitive. The
+            linear organization and structure of the content allows users to
+            explore freely without fear of getting lost, encouraging
+            experimentation and active participation.
+          </p>
+        </div>
+        <div class="answer">
+          <p>
+            12/ The most frustrating part of the interaction is that, while the
+            landing page is well organized and clear, the actual pages like
+            "About" and "Work" could have been better structured. On the "Work"
+            page, only one client project is showcased, while the other two
+            works are his current portfolio and a 3D portfolio he is developing.
+            There are at least two works that he could have logically added to
+            his "Work" page. In the "About" page, his technical skills and
+            awards are shown, but some links are not clickable or don’t lead
+            directly to his work, which can be confusing. Additionally, the
+            awards being listed in multiple places (in the about page and the
+            awards page), makes it harder to fully understand his achievements
+            and shows that the site’s structure could be improved.
+          </p>
+        </div>
+        <div class="answer">
+          <p>
+            13/ The most satisfying part of the interaction is when the user
+            opens the "About" or "Work" page, and the content is presented
+            within an illustration of a computer. This is satisfying because it
+            is an original concept that makes the portfolio feel interactive and
+            immersive, and also reinforces the creativity of the designer’s work
+            instead of a standard portfolio content. And when you click on a
+            project in the "Work" page, you can interact with it as if it was
+            the actual website of that portfolio which is also original and adds
+            to the designer’s attention to detail. I also liked that when you
+            click on the menu button top right, there is a hand animation
+            appears and “pulls down” the menu from the top so that it appears.
+            Moreover, on the landing page for “links” i find it satisfactory
+            that badge notifications appears on the GitHub, LinkedIn and
+            instagram icons when you hover over them. It highlights both the
+            designer’s attention to detail and encourages the user to interact
+            with the interface to find these little details that add to the
+            experience.
+          </p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
