--- a/week5/index.html
+++ b/week5/index.html
@@ -12,14 +12,9 @@
     />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <script src="script2.js" defer></script>
   </head>
   <body>
-    <!-- <h1>JS examples</h1> -->
-    <div class="outer">
-      <p>What is today's temperature?</p>
-      <input type="number" id="myTemp" />
-      <button id="submit" onclick="checkWeather()">Submit</button>
-    </div>
+    <h1>JS practice</h1>
   </body>
 </html>
