--- a/week6/index.html
+++ b/week6/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1 class="another">DOM practice</h1>
     <img src="cat-1.png" alt="" />
+    <section class></section>
     <button class="my-button" onclick="toggleMe ()">Toggle Me !</button>
     <p id="para-style">This is my first paragraph</p>
     <p>This is my second paragraph</p>
