--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -158,8 +158,11 @@
               <li>6. Pour the batter into the pan and spread evenly. </li>
               <li>7. Bake for 25-30 minutes, or until a toothpick comes out with a few crumbs.</li>
             </ul>
-          
-           </div>
+            <br></br>
+            <p>All rights reserved to <a href="https://www.youtube.com/@cookingwithrila">Cooking With Rila</a></p>
+            <p>Original video <a href="https://youtu.be/8bi1MaUuzcQ?si=Biba6T0FRTuKlBsB">here </a></p>
+            <p>Used for educational purposes only.</p>
+          </div>
           <button class="toggle-description">Show More</button>
         </div>
       </div>
