--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -9,134 +9,173 @@
   </head>
   <body>
     <main>
+      <!-- Here i decided to add a pop up window to do a little presentation of my page so users know what they will get into. a little presentation and a start button. -->
+      <dialog class="introDialog">
+        <div class="introContent">
+          <h1>Welcome to my vinyl library</h1>
+          <p class="notbow">
+            Hi there !<br />
+            This website is my personal library of the best tracks I’ve
+            collected. <br />
+            Each one is represented by a vinyl on the shelf. <br />
+            You can drag a vinyl and drop it onto the player to hear a sample
+            ✩°｡ ⋆⸜ 🎧✮ <br />
+            (be careful of the volume of your sound)
+          </p>
+          <p class="bow">
+            ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡤⠤⠤⣄⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣠⡤⠤⢤⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+            ⠀⠀⠀⠀⢠⡤⣤⣤⡀⠀⠀⠀⠀⠀⢘⢇⠀⠀⠀⠘⠙⠢⣀⠀⠀⠀⠀⠀⢀⡖⠋⠁⠀⠀⠀⡼⠇⠀⠀⠀⠀⠀⢀⣤⣤⡦⡄⠀⠀⠀⠀
+            ⣴⢖⣄⠀⠸⣅⢀⣠⠇⠀⣴⢖⣄⠀⠾⠋⠁⠀⠀⠀⠀⠀⠹⣾⠏⠻⠋⢂⠟⠀⠀⠀⠀⠒⠀⠉⡗⠀⢰⣶⣦⠀⠘⢄⡀⣱⠟⠀⢠⣶⣦
+            ⠈⠛⠀⠀⠀⠈⠛⠁⠀⠀⠈⠛⠁⠀⠉⢲⠀⠀⠀⠀⠀⠀⣠⠟⢮⣄⡴⠛⣤⡀⠀⠀⠀⠀⠀⡞⠃⠀⠀⠛⠁⠀⠀⠀⠹⠋⠀⠀⠀⠙⠁
+            ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠙⠤⡶⠋⠙⠁⠀⠀⠙⠁⠀⠈⠉⠙⢲⢴⠟⠙⠁⠀⠀ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+          </p>
+
+          <button id="dialogCloseButton" autofocus>Start now</button>
+        </div>
+      </dialog>
+      <!-- here is my "shelf" where i added 4 rows of vinyls, with 3 vinyls on each one. each vinyl has its title, artist, and date of release-->
       <section class="shelf">
         <div class="vinyl-row">
-          <div class="vinyl" data-audio="assets/txt-song1.mp3">
-            <img
-              src="https://i.pinimg.com/736x/08/da/42/08da427aed95803759fb078d5dc56ba0.jpg"
-            />
-            <div class="info">
-              <h3>Artist</h3>
-              <p>I know I love you</p>
-            </div>
-          </div>
-
-          <div class="vinyl" data-audio="sample2.mp3">
-            <img
-              src="https://i.pinimg.com/736x/b0/c7/4f/b0c74f861551fec72d28f1981b39cc74.jpg"
-            />
-            <div class="info">
-              <h3>Artist</h3>
-              <p>title</p>
-            </div>
-          </div>
-
-          <div class="vinyl" data-audio="sample3.mp3">
-            <img
-              src="https://i.pinimg.com/736x/74/f5/e1/74f5e11846bdd975f8c8442f92b125af.jpg"
-            />
-            <div class="info">
-              <h3>Artist</h3>
-              <p>title</p>
-            </div>
-          </div>
-        </div>
-        <div class="vinyl-row">
-          <div class="vinyl" data-audio="sample1.mp3">
-            <img
-              src="https://i.pinimg.com/1200x/17/75/ac/1775ac182d21f0f21ce1e81b4ac75104.jpg"
-            />
-            <div class="info">
-              <h3>Artist</h3>
-              <p>title</p>
-            </div>
-          </div>
-
-          <div class="vinyl" data-audio="sample2.mp3">
-            <img
-              src="https://i.pinimg.com/1200x/69/fd/a7/69fda73212de157126b60ae2f3c4647e.jpg"
-            />
-            <div class="info">
-              <h3>Artist</h3>
-              <p>title</p>
-            </div>
-          </div>
-
-          <div class="vinyl" data-audio="sample3.mp3">
+          <div class="vinyl" data-audio="assets/sample1.mp3" draggable="true">
             <img
               src="https://i.pinimg.com/1200x/f5/b9/a3/f5b9a3665bec0b24a6d605079edbbdc0.jpg"
             />
             <div class="info">
-              <h3>Artist</h3>
-              <p>title</p>
+              <h3>TOMORROW X TOGETHER</h3>
+              <p>0X1=LOVESONG (I Know I Love You)</p>
+              <p class="date">2021</p>
+            </div>
+          </div>
+
+          <div class="vinyl" data-audio="assets/sample2.mp3" draggable="true">
+            <img
+              src="https://i.pinimg.com/736x/2c/bf/01/2cbf01b7f61c74e9747e0118da9c22b1.jpg"
+            />
+            <div class="info">
+              <h3>Miracle</h3>
+              <p>TOMORROW X TOGETHER</p>
+              <p class="date">2024</p>
+            </div>
+          </div>
+
+          <div class="vinyl" data-audio="assets/sample3.mp3" draggable="true">
+            <img
+              src="https://i.pinimg.com/1200x/c0/33/49/c0334988f88df93ba766a17e9a31f86f.jpg"
+            />
+            <div class="info">
+              <h3>Wildest Dreams</h3>
+              <p>Taylor Swift</p>
+              <p class="date">2014</p>
             </div>
           </div>
         </div>
         <div class="vinyl-row">
-          <div class="vinyl" data-audio="sample1.mp3">
+          <div class="vinyl" data-audio="assets/sample4.mp3" draggable="true">
             <img
-              src="https://i.pinimg.com/736x/f7/54/fc/f754fcb5c290fb2f49fcbeed385b94b7.jpg"
+              src="https://i.pinimg.com/1200x/fd/6a/6e/fd6a6ecace742e03655ac52cb6950907.jpg"
             />
             <div class="info">
-              <h3>Artist</h3>
-              <p>title</p>
+              <h3>I AM</h3>
+              <p>IVE</p>
+              <p class="date">2023</p>
             </div>
           </div>
 
-          <div class="vinyl" data-audio="sample2.mp3">
+          <div class="vinyl" data-audio="assets/sample5.mp3" draggable="true">
             <img
-              src="https://i.pinimg.com/736x/10/78/22/1078220ababf179e3d1466abb184ad3c.jpg"
+              src="https://i.pinimg.com/736x/33/52/3e/33523e658969476cb441fa5f063e692f.jpg"
             />
             <div class="info">
-              <h3>Artist</h3>
-              <p>title</p>
+              <h3>Social Path</h3>
+              <p>Stray Kids</p>
+              <p class="date">2023</p>
             </div>
           </div>
 
-          <div class="vinyl" draggable="true" data-audio="sample3.mp3">
+          <div class="vinyl" data-audio="assets/sample6.mp3" draggable="true">
             <img
-              src="https://i.pinimg.com/736x/74/e3/a0/74e3a0330f8dcc1878a427efdf38550b.jpg"
+              src="https://i.pinimg.com/736x/56/09/75/560975fdec4ff836284d8b9599b25e32.jpg"
             />
             <div class="info">
-              <h3>Artist</h3>
-              <p>title</p>
+              <h3>Heavenly</h3>
+              <p>Cigarettes After Sex</p>
+              <p class="date">2019</p>
             </div>
           </div>
         </div>
         <div class="vinyl-row">
-          <div class="vinyl" data-audio="sample1.mp3">
+          <div class="vinyl" data-audio="assets/sample7.mp3" draggable="true">
             <img
-              src="https://i.pinimg.com/1200x/c2/65/f8/c265f86561c3077a76efa30073005c28.jpg"
+              src="https://i.pinimg.com/736x/76/c3/a7/76c3a7d7534683bed86ca54e8f2e6d4d.jpg"
             />
             <div class="info">
-              <h3>Artist</h3>
-              <p>title</p>
+              <h3>Sweater Weather</h3>
+              <p>The Neighbourhood</p>
+              <p class="date">2013</p>
             </div>
           </div>
 
-          <div class="vinyl" data-audio="sample2.mp3">
+          <div class="vinyl" data-audio="assets/sample8.mp3" draggable="true">
             <img
-              src="https://i.pinimg.com/736x/50/fc/21/50fc21a8f5e51b24f37b93d5524e760f.jpg"
+              src="https://cdn-images.dzcdn.net/images/cover/1dd56fd8824492e1a5106c99a00a85ec/500x500-000000-80-0-0.jpg"
             />
             <div class="info">
-              <h3>Artist</h3>
-              <p>title</p>
+              <h3>Creep</h3>
+              <p>Radiohead</p>
+              <p class="date">2016</p>
             </div>
           </div>
 
-          <div class="vinyl" data-audio="sample3.mp3">
+          <div class="vinyl" data-audio="assets/sample9.mp3" draggable="true">
             <img
-              src="https://i.pinimg.com/736x/7e/cd/54/7ecd54cae9d74ad95b775e54d2fbbe80.jpg"
+              src="https://t2.genius.com/unsafe/516x516/https%3A%2F%2Fimages.genius.com%2F41fdf20665e8a111e3f780aca4401794.1000x1000x1.png"
             />
             <div class="info">
-              <h3>Artist</h3>
-              <p>title</p>
+              <h3>No doubt</h3>
+              <p>Enhypen</p>
+              <p class="date">2024</p>
+            </div>
+          </div>
+        </div>
+        <div class="vinyl-row">
+          <div class="vinyl" data-audio="assets/sample10.mp3" draggable="true">
+            <img
+              src="https://i.pinimg.com/736x/20/66/14/206614d32e0eeb102569fc117e71c84d.jpg"
+            />
+            <div class="info">
+              <h3>Silver light</h3>
+              <p>ATEEZ</p>
+              <p class="date">2023</p>
+            </div>
+          </div>
+
+          <div class="vinyl" data-audio="assets/sample11.mp3" draggable="true">
+            <img
+              src="https://i.pinimg.com/1200x/50/74/ed/5074edb39006b1553b13460ee8b47ced.jpg"
+            />
+            <div class="info">
+              <h3>S-Class</h3>
+              <p>Stray Kids</p>
+              <p class="date">2023</p>
+            </div>
+          </div>
+
+          <div class="vinyl" data-audio="assets/sample12.mp3" draggable="true">
+            <img
+              src="https://i.scdn.co/image/ab67616d0000b2736b864d9a09cbf6c704eba902"
+            />
+            <div class="info">
+              <h3>Young and Restless</h3>
+              <p>Siamés</p>
+              <p class="date">2020</p>
             </div>
           </div>
         </div>
       </section>
+      <!-- here is the playcd section where users can drag and drop vinyls to play a sample of each song -->
       <section class="playcd" id="playcd">
         <p id="drop-text">Drag a vinyl here to play a sample !</p>
+        <div class="vinyl-text"></div>
         <img src="assets/table.png" alt="table" class="table" />
         <audio id="audioPlayer" controls></audio>
         <div class="progress-bar">
@@ -146,3 +185,38 @@
     </main>
   </body>
 </html>
+<!--
+Challenges I faced while building my website:
+
+1. Drag-and-drop: Making the vinyls play the audio only when dropped was tricky. I had to use dragstart, dragend, dragover, 
+and drop events so nothing triggers too early.
+
+2. Updating "Now playing" text: Changing the text dynamically to show the song title and artist without breaking the layout took some testing.
+
+3. Shelf layout: Initially, I used one shelf per row of 3 vinyls, but then I wanted to create individual shelves for better spacing, that's when
+I had to use .vinyl::after that creates an extra element after each .vinyl to visually represent a mini-shelf under it without changing the HTML structure.
+
+---
+
+Ideas and potential improvements for the website:
+
+1. Smooth vinyl animations: I want the vinyls to start spinning slowly when hovered and gradually reach a normal tempo. 
+Right now, the spin is immediate, which feels abrupt. A smoother acceleration and deceleration would make it more natural and visually pleasing.  
+
+2. Notes for each vinyl: Currently, my notes are one long paragraph. I want to break them into 3–4 short sentences that appear like music notes or lyrics. 
+Each sentence could float upward, move slightly randomly, and fade out before showing the next one, giving a lively, animated effect that matches the music theme.  
+
+3. Drag cues: I added a grab cursor for vinyls, but I want to give a clearer hint about where to drop them. 
+Maybe changing the background color of the drop zone when the vinyl is being hovered, or adding a subtle sliced border or glow on the drop zone, 
+would guide users more intuitively.  
+
+4. Shelf design: I want to make the shelves look more like real shelves, perhaps with shadows or textures or real images of shelves that still fit the theme, 
+to give depth and make the vinyl display feel more physical.  
+
+5. Drop zone: The current podium image works, but I might explore another design or image that better fits the dark theme of the site, 
+while still showing clearly where vinyls should be dropped.  
+
+6. Additional interactivity: I could add small audio-reactive animations, like the drop text pulsing with the music or vinyls slightly 
+vibrating when the audio plays. Also, adding transitions when switching tracks.  
+
+-->
